# CirculantGenerator

./: .gitignore  CMakeLists.txt  README.md
data/dim2/: 2_10.csv  2_100.csv  2_1000.csv  2_1001.csv  2_1002.csv  2_1003.csv  2_1004.csv  2_1005.csv  2_1006.csv  2_1007.csv  2_1008.csv  2_1009.csv  2_101.csv  2_1010.csv  2_1011.csv  2_1012.csv  2_1013.csv  2_1014.csv  2_1015.csv  2_1016.csv  2_1017.csv  2_1018.csv  2_1019.csv  2_102.csv  2_1020.csv  2_1021.csv  2_1022.csv  2_1023.csv  2_1024.csv  2_1025.csv  2_1026.csv  2_1027.csv  2_1028.csv  2_1029.csv  2_103.csv  2_1030.csv  2_1031.csv  2_1032.csv  2_1033.csv  2_1034.csv  (+1475 more)
data/dim2r/: 2r_10.csv  2r_100.csv  2r_1000.csv  2r_1001.csv  2r_1002.csv  2r_1003.csv  2r_1004.csv  2r_1005.csv  2r_1006.csv  2r_1007.csv  2r_1008.csv  2r_1009.csv  2r_101.csv  2r_1010.csv  2r_1011.csv  2r_1012.csv  2r_1013.csv  2r_1014.csv  2r_1015.csv  2r_1016.csv  2r_1017.csv  2r_1018.csv  2r_1019.csv  2r_102.csv  2r_1020.csv  2r_1021.csv  2r_1022.csv  2r_1023.csv  2r_1024.csv  2r_1025.csv  2r_1026.csv  2r_1027.csv  2r_1028.csv  2r_1029.csv  2r_103.csv  2r_1030.csv  2r_1031.csv  2r_1032.csv  2r_1033.csv  2r_1034.csv  (+1492 more)
data/dim3/: 3_10.csv  3_100.csv  3_1000.csv  3_101.csv  3_102.csv  3_1024.csv  3_103.csv  3_104.csv  3_105.csv  3_106.csv  3_107.csv  3_108.csv  3_109.csv  3_11.csv  3_110.csv  3_111.csv  3_112.csv  3_113.csv  3_114.csv  3_115.csv  3_116.csv  3_117.csv  (+573 more)
src/: constants.cpp  constants.hpp  gen.cpp  gen.hpp  generator.cpp  generator.hpp  graphparameters.cpp  graphparameters.hpp  main.cpp  profile.hpp  search.cpp  search.hpp  utils.hpp
(+2933 files in other folders)
